--- a/WEB/lab2/ui/html/base.layout.tmpl
+++ b/WEB/lab2/ui/html/base.layout.tmpl
@@ -2,16 +2,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<title>{{template "title" .}}</title>
 {{block "head" .}}
+<title>{{template "title" .}}</title>
 {{end}}
 
 <body>
-    {{block "header" .}}
-    {{end}}
-    {{template "main" .}}
-    {{block "footer" .}}
-    {{end}}
+    {{block "header" .}}{{end}}
+    {{block "main"   .}}{{end}}
+    {{block "footer" .}}{{end}}
 </body>
 
 </html>
