change exe path

--- a/WEB/lab2/ui/html/main.page.tmpl
+++ b/WEB/lab2/ui/html/main.page.tmpl
@@ -1,9 +1,7 @@
 {{template "base" .}}
 
-{{block "head" .}}
-{{end}}
-
 {{define "title"}}Главная страница{{end}}
+{{define "css_link"}}<link rel="stylesheet" href="/static/css/style.css">{{end}}
 
 {{define "header"}}
 <header>
